# log-analyser

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: COMMANDS.md  EXTENSIONS.md
src/log_analyser/: __init__.py  cli.py  models.py  output.py  parser.py
